--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -9,4 +9,4 @@
   </li>
 </ul>
 
-<app-hero-detail [hero]="selectedHero"></app-hero-detail>s
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
